--- a/admin.html
+++ b/admin.html
@@ -2,40 +2,98 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katy Math | Admin Console</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-slate-950 text-slate-100 min-h-screen p-8">
+    <style>
+        /* Custom scrollbar for a darker look */
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: #0f172a; }
+        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 4px; }
+        ::-webkit-scrollbar-thumb:hover { background: #475569; }
 
-    <div class="max-w-6xl mx-auto">
-        <div class="flex justify-between items-center mb-8 border-b border-slate-800 pb-4">
-            <h1 class="text-3xl font-black text-red-500 tracking-tighter uppercase">Admin Control Panel</h1>
-            <div class="flex gap-4">
-                <button id="resetLeaderboardBtn" class="bg-orange-600 hover:bg-orange-500 px-4 py-2 rounded font-bold text-sm transition">
+        .admin-gradient {
+            background: linear-gradient(135deg, #0f172a 0%, #020617 100%);
+        }
+    </style>
+</head>
+<body class="admin-gradient text-slate-100 min-h-screen font-sans">
+
+    <nav class="border-b border-slate-800 bg-slate-900/50 backdrop-blur-md sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center gap-3">
+                <div class="bg-red-600 text-white p-2 rounded-lg font-black shadow-lg shadow-red-900/20">KM</div>
+                <h1 class="text-xl font-black tracking-tighter uppercase">Admin <span class="text-red-500">Console</span></h1>
+            </div>
+            <div class="flex gap-3">
+                <button id="resetLeaderboardBtn" class="bg-orange-600 hover:bg-orange-500 text-white px-5 py-2 rounded-lg font-bold text-sm transition-all flex items-center gap-2 shadow-lg shadow-orange-900/20">
                     🔄 Reset Weekly Leaderboard
                 </button>
-                <a href="index.html" class="bg-slate-800 px-4 py-2 rounded text-sm">Back to Site</a>
+                <a href="index.html" class="bg-slate-800 hover:bg-slate-700 px-5 py-2 rounded-lg text-sm font-medium transition-colors">
+                    Exit to Site
+                </a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="max-w-7xl mx-auto px-6 py-8">
+        
+        <div class="mb-8">
+            <h2 class="text-3xl font-bold mb-2">User Management</h2>
+            <p class="text-slate-400 text-sm">Monitor student activity, manage accounts, and reset weekly rankings.</p>
+        </div>
+
+        <div class="mb-6">
+            <div class="relative group">
+                <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
+                    <span class="text-slate-500 text-lg">🔍</span>
+                </div>
+                <input id="adminSearch" type="text" placeholder="Search students by name, email, or grade..." 
+                    class="w-full bg-slate-900 border border-slate-700 pl-12 pr-4 py-4 rounded-xl focus:border-blue-500 focus:ring-1 focus:ring-blue-500 outline-none text-sm transition-all group-hover:border-slate-500">
             </div>
         </div>
 
-        <div class="bg-slate-900 border border-slate-800 rounded-xl overflow-hidden shadow-2xl">
-            <table class="w-full text-left border-collapse">
-                <thead class="bg-slate-800 text-slate-400 text-xs uppercase tracking-widest">
-                    <tr>
-                        <th class="p-4">Name</th>
-                        <th class="p-4">Grade</th>
-                        <th class="p-4">Credits</th>
-                        <th class="p-4">Total Mins</th>
-                        <th class="p-4 text-right">Actions</th>
-                    </tr>
-                </thead>
-                <tbody id="adminUserList">
-                    <tr><td colspan="5" class="p-10 text-center animate-pulse">Fetching database...</td></tr>
-                </tbody>
-            </table>
+        <div class="bg-slate-900 border border-slate-800 rounded-2xl overflow-hidden shadow-2xl">
+            <div class="overflow-x-auto">
+                <table class="w-full text-left border-collapse">
+                    <thead>
+                        <tr class="bg-slate-800/50 text-slate-400 text-[11px] uppercase tracking-[0.2em] font-black">
+                            <th class="p-5">Student Name</th>
+                            <th class="p-5">Grade</th>
+                            <th class="p-5">Credits (Total)</th>
+                            <th class="p-5">Weekly Time</th>
+                            <th class="p-5 text-right">Account Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="adminUserList" class="divide-y divide-slate-800">
+                        <tr>
+                            <td colspan="5" class="p-20 text-center">
+                                <div class="flex flex-col items-center gap-4">
+                                    <div class="w-10 h-10 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
+                                    <p class="text-slate-500 font-medium animate-pulse tracking-widest uppercase text-xs">Accessing Database...</p>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            
+            <div class="bg-slate-800/30 p-4 border-t border-slate-800 flex justify-between items-center text-[10px] text-slate-500 font-bold uppercase tracking-widest">
+                <div>Admin UID Verified: <span class="text-slate-300">bnGhRvqW1YhvGek1JTLuAed6Ib63</span></div>
+                <div>Connected to Firebase Production</div>
+            </div>
         </div>
-    </div>
+
+        <div class="mt-8 p-6 border border-red-900/20 rounded-2xl bg-red-900/5">
+            <h3 class="text-red-500 font-bold text-sm mb-2 uppercase tracking-wider">Security Notice</h3>
+            <p class="text-slate-400 text-xs leading-relaxed">
+                Resetting the leaderboard will clear the <code class="text-blue-400 bg-slate-800 px-1 rounded">weekMinutes</code> field for every user in the database. 
+                Deleting an account is permanent and removes all Firestore data associated with that UID. These actions cannot be undone.
+            </p>
+        </div>
+    </main>
 
     <script type="module" src="./js/admin.js"></script>
+
 </body>
 </html>
