--- a/admin.html
+++ b/admin.html
@@ -56,15 +56,15 @@
         <div class="bg-slate-900 border border-slate-800 rounded-2xl overflow-hidden shadow-2xl">
             <div class="overflow-x-auto">
                 <table class="w-full text-left border-collapse">
-                    <thead>
-                        <tr class="bg-slate-800/50 text-slate-400 text-[11px] uppercase tracking-[0.2em] font-black">
-                            <th class="p-5">Student Name</th>
-                            <th class="p-5">Grade</th>
-                            <th class="p-5">Credits (Total)</th>
-                            <th class="p-5">Weekly Time</th>
-                            <th class="p-5 text-right">Account Actions</th>
-                        </tr>
-                    </thead>
+                   <thead>
+    <tr class="bg-slate-800/50 text-slate-400 text-[11px] uppercase tracking-[0.2em] font-black">
+        <th class="p-5">Student Name</th>
+        <th class="p-5">Email</th> <th class="p-5">Grade</th>
+        <th class="p-5">Credits</th>
+        <th class="p-5">Weekly Time</th>
+        <th class="p-5 text-right">Actions</th>
+    </tr>
+</thead>
                     <tbody id="adminUserList" class="divide-y divide-slate-800">
                         <tr>
                             <td colspan="5" class="p-20 text-center">
