--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
       <button onclick="navigate('tokens')">Tokens</button>
       <button onclick="navigate('leaderboard')">Leaderboard</button>
       <button onclick="navigate('account')">Account</button>
+      <a href="tutoring.html" class="bg-blue-600/20 hover:bg-blue-600 px-3 py-1 rounded transition border border-blue-500/50 flex items-center justify-center">
+        Chat
+    </a>
       <button id="logoutBtn" class="bg-red-600 px-3 py-1 rounded font-bold">Logout</button>
     </div>
   </div>
