--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div>
                     <h3 class="text-lg font-bold text-blue-400 mb-2">Beta Version 1.0</h3>
                     <div class="text-sm text-gray-300 space-y-3 leading-relaxed">
-                        <p>This is v1 beta—there are lots of bugs, but we are working to fix them! <span class="text-yellow-400 font-bold underline">PRO TIP:</span> For now, the best link to use is the **3rd link**.</p>
+                        <p>This is v1 beta—there are lots of bugs, but we are working to fix them! <span class="text-yellow-400 font-bold underline">PRO TIP:</span> For now, the best link to use is the **3rd link** Also click on Link1 for it to work.</p>
                         <p>Share the site with your **Referral URL** (found in Account) to gain credits! You get 50, they get 20.</p>
                         <p class="text-xs text-gray-400 italic font-medium">Note: We restrict time per link to prevent blocking. Referrals unlock more playtime!</p>
                     </div>
