--- a/inbox.html
+++ b/inbox.html
@@ -1,57 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inbox | Katy Math</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inbox | Katy Math</title>
+
+  <!-- Tailwind (kept) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Modern global stylesheet -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-dark text-white min-h-screen">
+<body class="page">
 
-    <div class="fixed top-0 left-0 w-full h-full -z-10 overflow-hidden pointer-events-none">
-        <div class="absolute top-[-10%] left-[-10%] w-[40%] h-[40%] bg-blue-600/10 rounded-full blur-[120px]"></div>
-        <div class="absolute bottom-[10%] right-[-5%] w-[30%] h-[30%] bg-emerald-600/10 rounded-full blur-[100px]"></div>
-    </div>
+  <!-- Subtle global background already comes from style.css; keeping your glow blobs as extra flair -->
+  <div class="fixed top-0 left-0 w-full h-full -z-10 overflow-hidden pointer-events-none">
+    <div class="absolute top-[-10%] left-[-10%] w-[40%] h-[40%] bg-blue-600/10 rounded-full blur-[120px]"></div>
+    <div class="absolute bottom-[10%] right-[-5%] w-[30%] h-[30%] bg-emerald-600/10 rounded-full blur-[100px]"></div>
+  </div>
 
-    <div class="max-w-4xl mx-auto p-4 sm:p-8">
-        <header class="flex justify-between items-center mb-8 animate-up">
-            <div>
-                <h1 class="text-3xl font-black bg-gradient-to-r from-blue-400 to-emerald-400 bg-clip-text text-transparent">
-                    Inbox
-                </h1>
-                <p class="text-gray-400 text-sm">Stay updated with your rewards and activity.</p>
-            </div>
-            <a href="index.html" class="modern-card px-4 py-2 text-sm font-bold hover:text-blue-400 transition">
-                ← Back to Dashboard
-            </a>
+  <header class="site-header">
+    <nav class="navbar">
+      <a href="index.html" class="navbar-brand">
+        <span class="navbar-brand-logo"></span>
+        <span>Katy Math</span>
+      </a>
+      <a href="index.html" class="btn-outline text-sm">
+        ← Back to Dashboard
+      </a>
+    </nav>
+  </header>
+
+  <main>
+    <div class="container">
+      <section class="surface">
+        <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 gap-4">
+          <div>
+            <h1 class="text-3xl font-black bg-gradient-to-r from-blue-400 to-emerald-400 bg-clip-text text-transparent">
+              Inbox
+            </h1>
+            <p class="text-gray-400 text-sm">
+              Stay updated with your rewards and activity.
+            </p>
+          </div>
         </header>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-8 animate-up" style="animation-delay: 0.1s;">
-            <div class="modern-card p-4 flex items-center gap-4">
-                <div class="w-12 h-12 bg-blue-500/20 rounded-xl flex items-center justify-center text-2xl">✉️</div>
-                <div>
-                    <div class="text-xs text-gray-400 uppercase font-bold tracking-widest">New Alerts</div>
-                    <div id="unreadCount" class="text-2xl font-black">0</div>
-                </div>
+        <div class="card-grid mb-6">
+          <div class="card flex items-center gap-4">
+            <div class="w-12 h-12 bg-blue-500/20 rounded-xl flex items-center justify-center text-2xl">✉️</div>
+            <div>
+              <div class="text-xs text-gray-400 uppercase font-bold tracking-widest">New Alerts</div>
+              <div id="unreadCount" class="text-2xl font-black">0</div>
             </div>
-            <div class="modern-card p-4 flex items-center gap-4">
-                <div class="w-12 h-12 bg-emerald-500/20 rounded-xl flex items-center justify-center text-2xl">🪙</div>
-                <div>
-                    <div class="text-xs text-gray-400 uppercase font-bold tracking-widest">Lifetime Earned</div>
-                    <div id="totalEarnedInbox" class="text-2xl font-black">0</div>
-                </div>
+          </div>
+          <div class="card flex items-center gap-4">
+            <div class="w-12 h-12 bg-emerald-500/20 rounded-xl flex items-center justify-center text-2xl">🪙</div>
+            <div>
+              <div class="text-xs text-gray-400 uppercase font-bold tracking-widest">Lifetime Earned</div>
+              <div id="totalEarnedInbox" class="text-2xl font-black">0</div>
             </div>
+          </div>
         </div>
 
-        <div id="inboxList" class="space-y-4 animate-up" style="animation-delay: 0.2s;">
-            <div class="text-center py-20">
-                <div class="inline-block w-8 h-8 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
-                <p class="mt-4 text-gray-500">Syncing messages...</p>
-            </div>
+        <div id="inboxList" class="space-y-4">
+          <div class="text-center py-20">
+            <div class="inline-block w-8 h-8 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
+            <p class="mt-4 text-gray-500">Syncing messages...</p>
+          </div>
         </div>
+      </section>
     </div>
+  </main>
 
-    <script type="module" src="./js/inbox.js"></script>
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <span>© 2026 Katy Math</span>
+    </div>
+  </footer>
+
+  <script type="module" src="./js/inbox.js"></script>
 </body>
 </html>
