--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
             </span>
           </button>
         </div>
+        <!-- inside .navbar-nav, with the other page buttons -->
+<button
+  type="button"
+  onclick="window.location.href='suggestion.html'"
+  class="px-3 py-1.5 rounded-full text-xs font-medium text-gray-300 hover:text-white hover:bg-white/5 transition whitespace-nowrap"
+>
+  Suggestions
+</button>
 
         <!-- Chat link -->
         <a
