--- a/admin.html
+++ b/admin.html
@@ -1,99 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Katy Math | Admin Console</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        /* Custom scrollbar for a darker look */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #0f172a; }
-        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 4px; }
-        ::-webkit-scrollbar-thumb:hover { background: #475569; }
+  <meta charset="UTF-8" />
+  <title>Admin | Katy Math</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        .admin-gradient {
-            background: linear-gradient(135deg, #0f172a 0%, #020617 100%);
-        }
-    </style>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="admin-gradient text-slate-100 min-h-screen font-sans">
-
-    <nav class="border-b border-slate-800 bg-slate-900/50 backdrop-blur-md sticky top-0 z-50">
-        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <div class="bg-red-600 text-white p-2 rounded-lg font-black shadow-lg shadow-red-900/20">KM</div>
-                <h1 class="text-xl font-black tracking-tighter uppercase">Admin <span class="text-red-500">Console</span></h1>
-            </div>
-            <div class="flex gap-3">
-                <button id="resetLeaderboardBtn" class="bg-orange-600 hover:bg-orange-500 text-white px-5 py-2 rounded-lg font-bold text-sm transition-all flex items-center gap-2 shadow-lg shadow-orange-900/20">
-                    🔄 Reset Weekly Leaderboard
-                </button>
-                <a href="index.html" class="bg-slate-800 hover:bg-slate-700 px-5 py-2 rounded-lg text-sm font-medium transition-colors">
-                    Exit to Site
-                </a>
-            </div>
-        </div>
+<body class="page">
+  <!-- Top bar -->
+  <header class="site-header">
+    <nav class="navbar">
+      <a href="index.html" class="navbar-brand">
+        <span class="navbar-brand-logo"></span>
+        <span>Katy Math Admin</span>
+      </a>
+      <div class="navbar-nav">
+        <a
+          href="index.html"
+          class="px-3 py-1.5 rounded-full text-xs font-medium text-gray-300 hover:text-white hover:bg-white/5 transition whitespace-nowrap"
+        >
+          ← Back to App
+        </a>
+      </div>
     </nav>
+  </header>
 
-    <main class="max-w-7xl mx-auto px-6 py-8">
-        
-        <div class="mb-8">
-            <h2 class="text-3xl font-bold mb-2">User Management</h2>
-            <p class="text-slate-400 text-sm">Monitor student activity, manage accounts, and reset weekly rankings.</p>
-        </div>
-
-        <div class="mb-6">
-            <div class="relative group">
-                <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
-                    <span class="text-slate-500 text-lg">🔍</span>
-                </div>
-                <input id="adminSearch" type="text" placeholder="Search students by name, email, or grade..." 
-                    class="w-full bg-slate-900 border border-slate-700 pl-12 pr-4 py-4 rounded-xl focus:border-blue-500 focus:ring-1 focus:ring-blue-500 outline-none text-sm transition-all group-hover:border-slate-500">
-            </div>
-        </div>
-
-        <div class="bg-slate-900 border border-slate-800 rounded-2xl overflow-hidden shadow-2xl">
-            <div class="overflow-x-auto">
-                <table class="w-full text-left border-collapse">
-                   <thead>
-    <tr class="bg-slate-800/50 text-slate-400 text-[11px] uppercase tracking-[0.2em] font-black">
-        <th class="p-5">Student Name</th>
-        <th class="p-5">Email</th> <th class="p-5">Grade</th>
-        <th class="p-5">Credits</th>
-        <th class="p-5">Weekly Time</th>
-        <th class="p-5 text-right">Actions</th>
-    </tr>
-</thead>
-                    <tbody id="adminUserList" class="divide-y divide-slate-800">
-                        <tr>
-                           <td colspan="6" class="p-20 text-center">
-                                <div class="flex flex-col items-center gap-4">
-                                    <div class="w-10 h-10 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
-                                    <p class="text-slate-500 font-medium animate-pulse tracking-widest uppercase text-xs">Accessing Database...</p>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            
-            <div class="bg-slate-800/30 p-4 border-t border-slate-800 flex justify-between items-center text-[10px] text-slate-500 font-bold uppercase tracking-widest">
-                <div>Admin UID Verified: <span class="text-slate-300">bnGhRvqW1YhvGek1JTLuAed6Ib63</span></div>
-                <div>Connected to Firebase Production</div>
-            </div>
-        </div>
-
-        <div class="mt-8 p-6 border border-red-900/20 rounded-2xl bg-red-900/5">
-            <h3 class="text-red-500 font-bold text-sm mb-2 uppercase tracking-wider">Security Notice</h3>
-            <p class="text-slate-400 text-xs leading-relaxed">
-                Resetting the leaderboard will clear the <code class="text-blue-400 bg-slate-800 px-1 rounded">weekMinutes</code> field for every user in the database. 
-                Deleting an account is permanent and removes all Firestore data associated with that UID. These actions cannot be undone.
+  <main>
+    <div class="container">
+      <section class="surface">
+        <!-- HEADER -->
+        <header class="mb-6 flex flex-col md:flex-row md:items-center md:justify-between gap-4">
+          <div>
+            <span class="badge">Admin Console</span>
+            <h1>Students & Leaderboard</h1>
+            <p class="text-sm text-gray-400 max-w-xl">
+              Manage users, reset the weekly leaderboard, and review suggestions
+              from students. Only the configured admin account can access this page.
             </p>
+          </div>
+          <div class="flex flex-col items-start md:items-end gap-2">
+            <button
+              id="resetLeaderboardBtn"
+              type="button"
+              class="bg-red-600/80 hover:bg-red-500 text-white text-xs font-bold uppercase tracking-[0.16em] px-4 py-2 rounded-full shadow-lg"
+            >
+              Reset Leaderboard & Distribute Rewards
+            </button>
+            <p class="text-[10px] text-gray-500 max-w-xs text-right">
+              This will award credits to the weekly top 10, send notifications,
+              and reset all students' weekly minutes.
+            </p>
+          </div>
+        </header>
+
+        <!-- USER SEARCH -->
+        <div class="mb-4 flex flex-col md:flex-row md:items-center md:justify-between gap-3">
+          <div class="text-xs text-gray-400 uppercase tracking-[0.16em] font-bold">
+            Students
+          </div>
+          <div class="flex items-center gap-2 w-full md:w-auto">
+            <input
+              id="adminSearch"
+              type="text"
+              placeholder="Search by name or email..."
+              class="w-full md:w-64 bg-gray-900 p-2 rounded border border-gray-700 text-sm text-gray-200 outline-none focus:border-blue-500"
+            />
+          </div>
         </div>
-    </main>
 
-    <script type="module" src="./js/admin.js"></script>
+        <!-- STUDENT TABLE -->
+        <div class="table-wrapper mb-10">
+          <table class="w-full text-sm">
+            <thead>
+              <tr class="bg-gray-900/70 text-xs text-slate-400 uppercase tracking-widest">
+                <th class="p-3 text-left">Name</th>
+                <th class="p-3 text-left">Email</th>
+                <th class="p-3 text-left">Grade</th>
+                <th class="p-3 text-left">Credits</th>
+                <th class="p-3 text-left">This Week (min)</th>
+                <th class="p-3 text-right">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="adminUserList">
+              <tr>
+                <td colspan="6" class="p-10 text-center text-white">
+                  Loading Students...
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
+        <!-- SUGGESTIONS SECTION -->
+        <section class="mt-8">
+          <header class="mb-4 flex flex-col md:flex-row md:items-center md:justify-between gap-3">
+            <div>
+              <div class="text-xs text-gray-400 uppercase tracking-[0.16em] font-bold">
+                Suggestions & Bug Reports
+              </div>
+              <p class="text-xs text-gray-500 max-w-xl">
+                Students spend <span class="font-semibold text-emerald-300">20 credits</span>
+                to submit a suggestion. If you approve it, refund their 20 credits and optionally
+                give bonus tokens for especially helpful feedback.
+              </p>
+            </div>
+            <div class="text-[10px] text-gray-500 italic">
+              Tip: Tell students they can earn extra credits for good bug reports or ideas.
+            </div>
+          </header>
+
+          <div class="table-wrapper">
+            <table class="w-full text-sm">
+              <thead>
+                <tr class="bg-gray-900/70 text-xs text-slate-400 uppercase tracking-widest">
+                  <th class="p-3 text-left">Suggestion</th>
+                  <th class="p-3 text-left">Type</th>
+                  <th class="p-3 text-left">User</th>
+                  <th class="p-3 text-left">Status</th>
+                  <th class="p-3 text-right">Review</th>
+                </tr>
+              </thead>
+              <tbody id="suggestionList">
+                <tr>
+                  <td colspan="5" class="p-6 text-center text-slate-400 text-sm">
+                    Loading suggestions...
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+      </section>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <span>© 2026 Katy Math</span>
+      <span>Admin Panel</span>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script type="module" src="./js/firebase.js"></script>
+  <script type="module" src="./js/admin.js"></script>
 </body>
 </html>
