Change button label and update referral code input
Updated button text and modified referral code placeholder.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   onclick="window.location.href='suggestion.html'"
   class="px-3 py-1.5 rounded-full text-xs font-medium text-gray-300 hover:text-white hover:bg-white/5 transition whitespace-nowrap"
 >
-  Suggestions
+  Suggest/report
 </button>
 
         <!-- Chat link -->
@@ -297,8 +297,7 @@
               <div class="text-sm text-gray-300 space-y-3 leading-relaxed">
                 <p>
                   This is v1 beta—there are lots of bugs, but we are working to fix them!
-                  <span class="text-yellow-400 font-bold underline">PRO TIP:</span>
-                  For now, use the <strong>3rd link</strong>.
+                please note the chatroom is not working yet 
                 </p>
                 <p>Share the site with your <strong>Referral URL</strong> to gain credits! You get 50, they get 20.</p>
               </div>
@@ -392,7 +391,7 @@
       <div id="loginError" class="text-red-400 text-xs mb-2 text-center"></div>
       <input id="email" type="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
-      <input id="referralCodeInput" type="text" placeholder="Referral code (optional)" />
+      <input id="referralCodeInput" type="text" placeholder=" (DONT USE )" />
       <div class="grid grid-cols-2 gap-2 mt-2">
         <button id="signInBtn" type="button" class="bg-blue-600 py-2 rounded font-bold hover:bg-blue-500">Sign In</button>
         <button id="signUpBtn" type="button" class="bg-green-600 py-2 rounded font-bold hover:bg-green-500">Sign Up</button>
