Change version label to 'Stable 1.0' and update text
Updated version label and description in index.html.

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
           <div class="flex items-start gap-4">
             <div class="text-3xl">🚀</div>
             <div>
-              <h3 class="text-lg font-bold text-blue-400 mb-2">Beta Version 1.0</h3>
+              <h3 class="text-lg font-bold text-blue-400 mb-2"> Stable 1.0</h3>
               <div class="text-sm text-gray-300 space-y-3 leading-relaxed">
                 <p>
-                  This is v1 beta—there are lots of bugs, but we are working to fix them!
-                please note the chatroom is not working yet 
+                  Many bugs got fixed please hit CTRL SHIFT R to see the stable version. Chat is not working yet. 
+                  Earn 150 credits for sharing links in suggest/report.
                 </p>
                 <p>Share the site with your <strong>Referral URL</strong> to gain credits! You get 50, they get 20.</p>
               </div>
