--- a/index.html
+++ b/index.html
@@ -245,12 +245,11 @@
 
         <!-- Chat link -->
         <a
-          href="tutoring.html"
-          class="hidden sm:inline-flex items-center justify-center px-3 py-1.5 rounded-full text-xs font-semibold border border-blue-500/60 bg-blue-500/15 text-blue-300 hover:bg-blue-500/25 transition whitespace-nowrap"
-        >
-          Chat
-        </a>
-
+  href="tutoring.html"
+  class="hidden sm:inline-flex items-center justify-center px-3 py-1.5 rounded-full text-xs font-semibold border border-blue-500/60 bg-blue-500/15 text-blue-300 hover:bg-blue-500/25 transition"
+>
+  Chat
+</a>
         <!-- Logout -->
         <button
           id="logoutBtn"
