--- a/tutoring.html
+++ b/tutoring.html
@@ -479,6 +479,7 @@
       <div class="status-pill" id="status-pill">
         <span class="status-dot"></span>
         <span id="status-text">Connecting…</span>
+        <span id="online-count" style="margin-left:6px; font-size:11px; color:#9ca3af;"></span>
       </div>
     </header>
 
@@ -539,12 +540,11 @@
     </div>
   </div>
 
-  <!-- Firebase v9 (compat) for quick drop-in -->
+  <!-- Firebase v9 compat -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
-  <!-- Your chat logic -->
   <script src="chat.js"></script>
 </body>
 </html>
