Change title from 'Chatroom' to 'tutorials'

--- a/tutoring.html
+++ b/tutoring.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Chatroom</title>
+  <title>tutorials</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
